--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="{% url 'encontrar_jobs' %}">Encontrar job's</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Perfil</a>
+                    <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="{% url 'logout' %}">Sair</a>
